--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SUKSES1"></activity>
+        <activity android:name=".activity.SUKSES2"></activity>
+        <activity android:name=".activity.FinalHomePage" />
+        <activity android:name=".activity.RaningFinalDemo" />
+        <activity android:name=".activity.SuksesPremi2" />
+        <activity android:name=".activity.SuksesPremi1" />
+        <activity android:name=".activity.DonasiPremiCheckOuts" />
+        <activity android:name=".activity.DonasiPremiCheckOut" />
+        <activity android:name=".activity.DonasiPremiRutin" />
+        <activity android:name=".activity.DonasiPremiTunggal" />
+        <activity android:name=".activity.PopUp2" />
+        <activity android:name=".activity.PopUp1" />
+        <activity android:name=".activity.WHYUS3" />
+        <activity android:name=".activity.WHYUS2" />
+        <activity android:name=".activity.WHYUS1" />
+        <activity android:name=".activity.Ranking" />
+        <activity android:name=".activity.SUKSES1" />
         <activity android:name=".activity.BPJSZakatSehatT" />
         <activity android:name=".activity.BPJSZakatSehatH" />
         <activity android:name=".activity.BPJSActivityZakatMenu" />
